test/spec_vectors/table/ok/module_10.wat
(module (table 1 (ref null $t)) (type $t (func)))