test/spec_vectors/table/fail/module_34.wat
(module (type $f (func)) (table 10 (ref $f)))